--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "cli-nodejs-api",
+  "name": "23",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "dev": "nodemon app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "connect-flash": "^0.1.1",
-    "cookie-parser": "^1.4.6",
+    "cookie-parser": "^1.4.5",
     "ejs": "^3.1.6",
-    "express": "^4.17.2",
-    "express-ejs-layouts": "^2.5.1",
+    "express": "^4.17.1",
+    "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.17.2",
-    "express-validator": "^6.14.0",
-    "morgan": "^1.10.0"
+    "express-validator": "^6.12.0",
+    "method-override": "^3.0.0",
+    "mongoose": "^5.12.13"
   }
 }
